--- a/migration/src/scss/styles/_about.scss
+++ b/migration/src/scss/styles/_about.scss
@@ -16,7 +16,6 @@ section.container {
             min-width: 30%;
             max-width: 60%;
             min-height: 70%;
-            max-height: 70%;
             border: 4px ridge transparent;
             border-radius: 2rem;
             background-image: linear-gradient(to top left, rgba(40, 40, 55), $backgroundDark), linear-gradient(to bottom right, #AF40FF, #5B42F3, #00DDEB);
@@ -27,64 +26,102 @@ section.container {
             object-fit: cover;
             transform-style: preserve-3d;
 
+            &--img {
+                position: relative;
+                transform-style: preserve-3d;
+
+                span {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    clip-path: url(#va_svg__clip);
+
+                    &.layer_1 {
+                        transform: translateZ(0.2rem);
+                        background-image: linear-gradient(to bottom right, #af40ff22, #5B42F322, #00DDEB22);
+                    }
+
+                    &.layer_2 {
+                        transform: translateZ(0.4rem);
+                        background-image: linear-gradient(to bottom right, #AF40FF44, #5B42F344, #00DDEB44);
+                    }
+
+                    &.layer_3 {
+                        transform: translateZ(0.8rem);
+                        background-image: linear-gradient(to bottom right, #AF40FF88, #5B42F388, #00DDEB88);
+                    }
+
+                    &.layer_4 {
+                        transform: translateZ(1.6rem);
+                        background-image: linear-gradient(to bottom right, #AF40FFcc, #5B42F3cc, #00DDEBcc);
+                    }
+                }
+            }
+
             img {
-                transform: translateZ(3rem);
+                transform: translateZ(2.4rem);
                 object-fit: cover;
                 clip-path: url(#va_svg__clip);
             }
+
+        }
+
+
+    }
+}
+
+.about {
+    grid-column: 2/3;
+    margin: auto 0;
+
+    &--title {
+        @include textShadow();
+
+        span {
+            @include textBackground(linear-gradient(to right, $jsYellow, $sassPink));
         }
     }
 
-    .about {
-        grid-column: 2/3;
-        margin: auto 0;
-
-        &--title {
-            @include textShadow();
-
-            span {
-                @include textBackground(linear-gradient(to right, $jsYellow, $sassPink));
-            }
+    &--text {
+        a {
+            font-weight: $thin;
         }
 
-        &--text {
-            a {
-                font-weight: $thin;
-            }
-
-            span {
-                @include textBackground(linear-gradient(to right, #AAFFA9, #11FFBD));
-            }
-        }
-
-    }
-
-    .info {
-        // todo Responsive design
-        grid-column: 1/3;
-        @include gridDisplay(2, 5%);
-        height: fit-content;
-
-        ul {
-            display: grid;
-            grid-auto-flow: column;
-            gap: 0 10%;
-            font-size: 1.4rem;
-            padding-left: 2rem;
-            list-style-type: none;
-
-            li {
-                margin: 0.4rem 0;
-            }
-        }
-
-        &--techstack {
-            grid-template-rows: repeat(3, 1fr);
-        }
-
-        &--interests {
-            grid-template-rows: repeat(2, 1fr);
+        span {
+            @include textBackground(linear-gradient(to right, #AAFFA9, #11FFBD));
         }
     }
+
+}
+
+.info {
+    // todo Responsive design
+    grid-column: 1/3;
+    @include gridDisplay(2, 5%);
+    height: fit-content;
+
+    ul {
+        display: grid;
+        grid-auto-flow: column;
+        gap: 0 10%;
+        font-size: 1.4rem;
+        padding-left: 2rem;
+        list-style-type: none;
+
+        li {
+            margin: 0.4rem 0;
+        }
+    }
+
+    &--techstack {
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    &--interests {
+        grid-template-rows: repeat(2, 1fr);
+    }
+}
 
 }
