--- a/src/scss/styles/_footer.scss
+++ b/src/scss/styles/_footer.scss
@@ -6,7 +6,9 @@ footer {
     grid-column: 1/3;
     position: sticky;
     bottom: 0;
-    background-color: $backgroundDark;
+    background: linear-gradient(to top, $backgroundDark 0%, rgba(17, 17, 17, 0.6) 33%, rgba(17, 17, 17, 0.3) 100%);
+    -webkit-backdrop-filter: blur(0.1rem);
+    backdrop-filter: blur(0.1rem);
 
     .end {
         height: fit-content;
